--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required (VERSION 2.8.11)
 project (downsampler)
 
 # Set path variables 
-set (DOWNSAMPLER_SRC "/home/pedro/Projects/downsampler/source")
+set (DOWNSAMPLER_SRC "source")
 # Addd source subdirectory
 add_subdirectory(${DOWNSAMPLER_SRC})
